syntax = "proto3";
option csharp_namespace = "Game.CoreNetworking";

service Auth {
	rpc Authorize(AuthorizeRequest) returns (AuthorizeReply) {}
}

message AuthorizeRequest {
	
}

message AuthorizeReply {
	bool WasSuccessful = 1;
	string ErrorMessage = 2;
}
