syntax = "proto3";
option csharp_namespace = "Game.CoreNetworking";

message Vector3 {
	float X = 1;
	float Y = 2;
	float Z = 3;
}